portfolio-v2/kind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deply
spec:
  replicas: 3
  selector:
    matchLabels:
        app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: purna303703/portfolio
          ports:
          - containerPort: 80
          
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            initialDelaySeconds: 3
            timeoutSeconds: 3
            failureThreshold: 2
