portfolio-v2/kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio
  ports:
  - port: 82
    targetPort: 80
  type: ClusterIP
